k3s/ingress/frontend_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - test.ttktjmt.com
    secretName: ttktjmt-tls
  rules:
  - host: test.ttktjmt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ttktjmt-frontend-service
            port:
              number: 80
